# truenas-telegram-bot

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  compose.yaml  pyproject.toml  truenas-compose.yaml
.github/workflows/: publish.yml
scripts/: configure-deployment.ps1
tests/: test_bot.py
truenas_bot/: __init__.py  __main__.py  bot.py  config.py  render.py  twitter.py
