[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "truenas-telegram-bot"
version = "0.1.0"
description = "Private Telegram command bot for TrueNAS SCALE"
requires-python = ">=3.12"
dependencies = [
  "httpx==0.28.1",
  "python-telegram-bot==22.5",
  "twscrape[curl]==0.19.1",
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]

[tool.setuptools.packages.find]
include = ["truenas_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
